--- a/Pong-export/package.json
+++ b/Pong-export/package.json
@@ -9,9 +9,7 @@
       "access_heart_rate"
     ],
     "buildTargets": [
-      "higgs",
-      "meson",
-      "gemini"
+      "higgs"
     ],
     "i18n": {
       "en": {
